# GameDev

./: CMakeLists.txt
New Engine/: CMakeLists.txt  Makefile  main.cpp
New Engine/code/: api.cpp  api.h
New Engine/code/engine/: camera.cpp  camera.h  datastorage.cpp  datastorage.h  engine.cpp  engine.h  eventmanager.h  logicsmanager.cpp  logicsmanager.h  map.cpp  map.h  physicsmanager.cpp  physicsmanager.h  rendermanager.cpp  rendermanager.h
New Engine/code/engine/storage/: collider.cpp  collider.h  components.cpp  components.h  gameobject.cpp  gameobject.h  renderer.cpp  renderer.h  rigidbody.cpp  rigidbody.h  script.cpp  script.h
src/: application.cpp
src/core/: Engine.cpp  Engine.h
src/core/Control/: Input.cpp  Input.h  Metrics.h  Time.h  camera.cpp  input.cpp  input.h
src/core/GameControl/:  Camera.h  Camera.h  ControlFPS.cpp  ControlFPS.h  GameControlScript.h  KeyboardInput.cpp  KeyboardInput.h  Metrics.cpp  Metrics.h  Time.cpp
src/core/management/: Drawmanager.cpp  EventManager.cpp  EventManager.h  LogicManager.cpp  LogicManager.h  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  RendererManager.cpp  RendererManager.h
src/core/math/: Vector.cpp  Vector.h
src/core/objects/: Collision.cpp  Collision.h  GameObjectComponent.cpp  GameObjectComponent.h  Renderer.cpp  Renderer.h  RigidBody.h  Script.h  renderer.h  script.h
src/core/shortcuts/: Shortcuts.cpp  Shortcuts.h
src/core/storage/: DataStorage.cpp  DataStorage.h  GameObject.cpp  GameObject.h
